Fix current sentence wrapping and fix some usability issues in annotation view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -394,6 +394,7 @@ span.selected {
 
 span.wordStyle {
     padding: 5px 0px 5px;
+    display: inline-block;
 }
 
 *.mark {
